# petal

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release-petal.yml  release.yml
crates/petal-builder/: Cargo.toml
crates/petal-builder/src/: lib.rs
crates/petal-cli/: Cargo.toml
crates/petal-cli/src/: main.rs
crates/petal-sdk/: Cargo.toml
crates/petal-sdk/src/: lib.rs  route_file.rs
docs/: releasing-petals.md
docs/adr/: 0001-contract-sdk-and-release-boundary.md
fixtures/: petal-build.toml
fixtures/conformance-route/: Cargo.toml
fixtures/conformance-route/files/: sign.rs  static.txt.rs
fixtures/conformance-route/src/: lib.rs
scripts/: check.sh  generate-bindings.sh  release-check.sh
src/: lib.rs
templates/rust-route-petal/: AGENTS.md  README.md  petal-build.toml  petal.toml
templates/rust-route-petal/route/: Cargo.toml  Cargo.toml.template
templates/rust-route-petal/route/files/: status.json.rs
templates/rust-route-petal/route/src/: lib.rs
wit/route/: route.wit
