[package]
name = "bloom-petal-contract"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/bloom-directory/petal"
description = "Canonical Bloom Petal component contract and WIT artifacts"
include = [
  "src/**",
  "wit/**",
  "templates/**",
  "templates/rust-route-petal/route/Cargo.toml",
  "templates/rust-route-petal/route/src/**",
  "templates/rust-route-petal/route/files/**",
  "README.md",
  "LICENSE",
]

[workspace]
members = [
  ".",
  "crates/petal-sdk",
  "crates/petal-builder",
  "crates/petal-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/bloom-directory/petal"

[workspace.dependencies]
blake3 = "1"
clap = { version = "4", features = ["derive"] }
getrandom = { version = "0.2", features = ["custom"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tempfile = "3"
toml = "0.8"
wasmparser = "0.221"
wit-bindgen = "=0.57.1"

[dependencies]
sha2.workspace = true

[dev-dependencies]
tempfile.workspace = true
