[package]
name = "bloom-petal-builder"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Deterministic route component builder for Bloom Petals"

[dependencies]
blake3.workspace = true
bloom-petal-contract = { path = "../..", version = "=0.1.0" }
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
wasmparser.workspace = true

[dev-dependencies]
tempfile.workspace = true

