[package]
name = "bloom-petal-sdk"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Rust SDK for authoring Bloom Petal route components"

[lib]
name = "petal"

[dependencies]
getrandom.workspace = true
serde.workspace = true
serde_json.workspace = true
wit-bindgen.workspace = true

